--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "uuidv4": "^6.2.12"
   },
   "scripts": {
     "start": "react-scripts start",
