--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^0.1.4",
+    "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-separator": "^0.1.3",
     "@stitches/react": "^1.2.6",
     "@testing-library/jest-dom": "^5.14.1",
