--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "dayjs": "^1.10.7",
+    "marked": "^4.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
