--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-icons": "^1.0.3",
     "@radix-ui/react-scroll-area": "^0.1.3",
     "@radix-ui/react-separator": "^0.1.3",
+    "@radix-ui/react-tooltip": "^0.1.6",
     "@stitches/react": "^1.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/marked": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.8.0",
